Add UI server health checks, notifications, and regression tests

--- a/ui-server/public/index.html
+++ b/ui-server/public/index.html
@@ -56,6 +56,14 @@
           </label>
         </div>
 
+        <div class="status-bar">
+          <span id="serverStatus" class="status-pill status-checking">Server: checking…</span>
+          <label class="notify-toggle" title="Enable macOS/desktop notifications when conversions finish">
+            <input id="notifyToggle" type="checkbox" />
+            Desktop notifications
+          </label>
+        </div>
+
         <button id="convertBtn" class="convert" disabled>
           Convert selected file
         </button>
